improved user configuration

--- a/spring-boot-starter-qpid-embedded/src/main/resources/initial-config.json
+++ b/spring-boot-starter-qpid-embedded/src/main/resources/initial-config.json
@@ -6,8 +6,8 @@
     "type" : "Plain",
     "secureOnlyMechanisms": [],
     "users": [{
-      "name": "guest",
-      "password": "guest",
+      "name": "${qpid.user.name}",
+      "password": "${qpid.user.password}",
       "type": "managed"
     }]
   } ],
